--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "start:watch": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
