--- a/services/backend/docker-compose.yml
+++ b/services/backend/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
 
-  money.hasanjoldic.com:
+  javnikonkursi.hasanjoldic.com:
     build: .
     image: javnikonkursi.hasanjoldic.com
     container_name: javnikonkursi.hasanjoldic.com
